Add depth2image support (w/ MiDaS or Transformers), fix issues with hires fix modes other than txt2img
